[gd_scene load_steps=6 format=2]

[ext_resource path="res://addons/DrunkBull.SuperLightning/src/test/Demo.gd" type="Script" id=1]
[ext_resource path="res://addons/DrunkBull.SuperLightning/src/main/SuperLightning.gd" type="Script" id=2]

[sub_resource type="CanvasItemMaterial" id=3]
blend_mode = 1

[sub_resource type="Environment" id=1]
background_mode = 4
glow_enabled = true
glow_bicubic_upscale = true

[sub_resource type="CanvasItemMaterial" id=2]
blend_mode = 1

[node name="Demo" type="Node2D"]
material = SubResource( 3 )
script = ExtResource( 1 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 1 )

[node name="SuperLightning" type="Node2D" parent="."]
material = SubResource( 2 )
script = ExtResource( 2 )

[node name="LayerGUI" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="LayerGUI"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -150.0
margin_bottom = 68.0
grow_horizontal = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClearPassPoints" type="Button" parent="LayerGUI/VBoxContainer"]
margin_right = 264.0
margin_bottom = 50.0
rect_min_size = Vector2( 150, 50 )
text = "clear pass points"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="LayerGUI/VBoxContainer"]
margin_top = 54.0
margin_right = 264.0
margin_bottom = 85.0
grow_horizontal = 0
grow_vertical = 0
text = "use left mouse button to take lightning
use right mouse button to add pass point"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PassPointsFlags" type="Node2D" parent="."]

[connection signal="pressed" from="LayerGUI/VBoxContainer/ButtonClearPassPoints" to="." method="_on_ButtonClearPassPoints_pressed"]
